fixed overflow bug

--- a/apps/excali-fe/app/globals.css
+++ b/apps/excali-fe/app/globals.css
@@ -20,6 +20,7 @@
 body {
   background-color: black;
   color: white;
+  overflow-x: hidden;
 }
 .feat-class::after {
   content: " ";
